# docs/swagger.json
@@ -4,6 +4,50 @@
         "contact": {}
     },
     "paths": {
+        "/admin/import": {
+            "post": {
+                "description": "Upload and import posts from a JSON file",
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "produces": [
+                    "text/plain"
+                ],
+                "tags": [
+                    "Admin API"
+                ],
+                "summary": "Import posts from a JSON file",
+                "parameters": [
+                    {
+                        "type": "file",
+                        "description": "JSON file with posts",
+                        "name": "file",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Posts imported successfully",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Error retrieving the file",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Error decoding JSON file",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/post": {
             "get": {
                 "description": "Get a post by ID",
@@ -30,7 +74,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/handlers.Post"
+                            "$ref": "#/definitions/structs.Post"
                         }
                     },
                     "400": {
@@ -73,7 +117,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handlers.Post"
+                            "$ref": "#/definitions/structs.Post"
                         }
                     }
                 ],
@@ -81,7 +125,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/handlers.Post"
+                            "$ref": "#/definitions/structs.Post"
                         }
                     },
                     "400": {
@@ -117,7 +161,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handlers.Post"
+                            "$ref": "#/definitions/structs.Post"
                         }
                     }
                 ],
@@ -125,7 +169,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/handlers.Post"
+                            "$ref": "#/definitions/structs.Post"
                         }
                     }
                 }
@@ -189,7 +233,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/handlers.Post"
+                                "$ref": "#/definitions/structs.Post"
                             }
                         }
                     }
@@ -198,7 +242,7 @@
         }
     },
     "definitions": {
-        "handlers.Post": {
+        "structs.Post": {
             "type": "object",
             "properties": {
                 "author": {
